# automata-theory

./: CMakeLists.txt  DFA.cpp  DFA.h  HiearchyOperations.cpp  HiearchyOperations.h  INFO.txt  LangOperations.cpp  LangOperations.h  NFA.cpp  NFA.h  README.md  main.cpp  myRegex.cpp  myRegex.h  syntaxTree.cpp  syntaxTree.h
